--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,4 +2,49 @@
     font-family: 'Roboto';
 }
 
+h1{
+    text-align: center;
+    padding: 0px;
+    font-size: large;
+}
+
+body {
+    min-height: 100vh;
+    padding-bottom: 100px;
+    position: relative;
+}
+
+header{
+    background-color: orange;
+    border-bottom: 1px solid #CCC;
+}
+
+.row{
+    margin: 0;
+}
+
+.container-flui{
+    padding: 0;
+}
+
+.btn-primary{
+    background-color: orange;
+    border: 2px solid black;
+}
+
+.btn-primary-hover{
+    background-color: darkblue;
+    border: 2px solid darkblue;
+}
+
+footer{
+    text-align: center;
+    margin-top: auto;
+}
+
+body{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 
